fix: permissions table on mobile is unusable

--- a/framework/core/less/admin/PermissionsPage.less
+++ b/framework/core/less/admin/PermissionsPage.less
@@ -63,9 +63,12 @@
     z-index: 1;
 
     &:first-child {
-      left: 0;
       z-index: 3;
       background: var(--body-bg);
+
+      @media @tablet-up {
+        left: 0;
+      }
     }
 
     &:not(:hover) .PermissionGrid-removeScope {
@@ -74,12 +77,15 @@
   }
   tbody {
     th {
-      position: -webkit-sticky;
-      position: sticky;
-      left: 0;
       padding-right: 50px;
       z-index: 4;
       background: inherit;
+
+      @media @tablet-up {
+        position: -webkit-sticky;
+        position: sticky;
+        left: 0;
+      }
 
       .icon {
         margin-right: 5px;
